fix ing sizing on smaller screens

--- a/assets/css/_features.styl
+++ b/assets/css/_features.styl
@@ -30,14 +30,17 @@
     &.edit-example:before
       content 'edit()'
 .features-img
-  size(140px)
+  width 140px
+  max-width 100%
+  height 140px
   margin auto
+  background-size 140px
+  background-repeat no-repeat
+.pushy-active .features-img
+  background-size 100%
 .flexibility-img
   retina-background-image('../img/flexibility')
-  background-size 140px
 .speed-img
   retina-background-image('../img/speed')
-  background-size 140px
 .integration-img
   retina-background-image('../img/integration')
-  background-size 140px
